style: Fix header flexbox item centering on small screens

--- a/media/jamescuzella-screen.css
+++ b/media/jamescuzella-screen.css
@@ -497,7 +497,7 @@ strong {
 			border-bottom: 0.0625rem solid black;
 			text-wrap: balance;
 			display: flex;
-			justify-content: space-between;
+			justify-content: center;
 			align-items: center;
 			flex-flow: row wrap;
 		}
